<resources>
    <string name="app_name">A01GR2</string>
    <string name="app_name2">AirA01a</string>
    <string name="blank"> </string>
    <string name="configuration">Settings</string>
    <string name="restore">Restore</string>
    <string name="icon">icon</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_message_power_off">Power Off</string>
    <string name="dialog_message_exit">Exit Application</string>
    <string name="dialog_title_connect_failed_fuji">Connect failed(FUJI)</string>
    <string name="dialog_title_connect_failed">Connect failed</string>
    <string name="dialog_title_button_retry">Retry</string>
    <string name="dialog_title_button_network_settings">WiFi Settings</string>
    <string name="dialog_title_loading_properties">Loading Camera Properties</string>
    <string name="dialog_message_loading_properties">Please wait&#8230;</string>
    <string name="finish_refresh">Finished Refresh</string>
    <string name="connect_start">start</string>
    <string name="connect_check_wifi">check WIFI</string>
    <string name="connect_change_run_mode">changeRunMode</string>
    <string name="fatal_cannot_use_camera">The CameraKit SDK can not work because the running mode of camera is UNKNOWN.   So please long press the power button of camera more than 8 seconds. (This is the camera reset operation.) After that turn on the camera power again.</string>
    <string name="camera_reset_required">The camera reset operation is required.</string>
    <string name="camera_not_found">Not Found&#8230;</string>
    <string name="connect_connected">connected</string>
    <string name="network_connection_timeout">Connection time out</string>
    <string name="pref_cat_application_control">App. Control</string>
    <string name="pref_exit_power_off">Exit Application(and Camera OFF)</string>
    <string name="pref_exit_only">Exit Application</string>
    <string name="pref_fujix_display_camera_view">Use Camera Display</string>
    <string name="pref_fujix_display_camera_view_summary">EXPERIMENTAL: Shows liveview screen both camera and smartphone.</string>
    <string name="pref_fujix_focus_xy">Number of Focus Point X,Y (default: 7,7)</string>
    <string name="pref_summary_fujix_focus_xy"> </string>
    <string name="pref_fujix_liveview_wait">Liveview receive wait (default: 80)</string>
    <string name="pref_summary_fujix_liveview_wait"> </string>
    <string name="pref_fujix_command_polling_wait">Status polling wait (default: 500)</string>
    <string name="pref_summary_fujix_command_polling_wait"> </string>
    <string name="pref_special_thanks">Special Thanks to</string>
    <string name="pref_capture_both_camera_and_live_view">Capture both camera and Live View</string>
    <string name="pref_connection_method">Connection Method (Needs restart)</string>
    <string name="save_props">Save</string>
    <string name="hint_save_props">Label</string>
    <string name="saved_my_props">Saved Property : </string>
    <string name="auto_save_props">(Auto Save)</string>
    <string name="title_tab_title_load">Load</string>
    <string name="title_tab_title_save">Save</string>
    <string name="title_my_settings">Favorite Camera Properties</string>
    <string name="dialog_start_save_property_message">Please Wait</string>
    <string name="dialog_start_save_property_title">Storing Properties&#8230;</string>
    <string name="dialog_start_load_property_message">Please Wait</string>
    <string name="dialog_start_load_property_title">Setting Properties&#8230;</string>
    <string name="restored_my_props">Restored Property : </string>
    <string name="dialog_message_restore_camera_property">Restore Camera Property</string>
    <string name="pref_gr2_display_mode">Display Mode</string>
    <string name="pref_gr2_display_camera_view">Mirror Camera Screen</string>
    <string name="pref_gr2_display_camera_view_summary">Use same camera screen.</string>
    <string name="pref_gr2_lcd_sleep">Screen off during connected</string>
    <string name="pref_cat_camera">Camera</string>
    <string name="pref_cat_initialize">App. Startup</string>
    <string name="pref_auto_connect_camera">Auto Connect To Camera</string>
    <string name="pref_summary_auto_connect_camera">Normally to keep ON.</string>
    <string name="pref_cat_others">Others</string>
    <string name="pref_call_share_after_save">Share after Save</string>
    <string name="pref_use_playback_menu">Use playback screen menu</string>
    <string name="summary_use_playback_menu">Normally to keep ON.</string>
    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="only_opc_feature">This feature is only available for a OPC Camera.</string>
    <string name="pref_degug_info">Debug Information</string>
    <string name="pref_summary_debug_info">LogCat Information</string>
    <string name="data_saving">Saving&#8230;</string>
    <string name="action_refresh">Refresh</string>
    <string name="hide_panel">Hide</string>
    <string name="show_panel">Show</string>
    <string name="camera_disconnected">Disconnected</string>
    <string name="action_synchroize_datetime">Time Sync.</string>
    <string name="action_info">Information</string>
    <string name="action_download">download</string>
    <string name="action_download_movie">download</string>
    <string name="action_download_original_movie">Original Size</string>
    <string name="action_delete_movie">Delete</string>
    <string name="action_get_information">picture information</string>
    <string name="action_download_original_size">Original Size</string>
    <string name="action_download_2048x1536">2048 x 1536</string>
    <string name="action_download_1920x1440">1920 x 1440</string>
    <string name="action_download_1600x1200">1600 x 1200</string>
    <string name="action_download_1024x768">1024 x 768</string>
    <string name="action_download_640x480">Small Size</string>
    <string name="action_download_raw">RAW</string>
    <string name="action_batch_download_640x480">Small Size(JPEG)</string>
    <string name="action_batch_download_raw">Original Size(with RAW)</string>
    <string name="action_delete_picture">Delete</string>
    <string name="action_select_all">Select All/Unselect All</string>
    <string name="dialog_get_information_title">Getting Picture Information</string>
    <string name="download_control_get_information_title">Information</string>
    <string name="download_control_download_failed">Download failed</string>
    <string name="download_control_save_failed">Save failed</string>
    <string name="download_control_get_information_failed">Get information failed</string>
    <string name="dialog_download_file_title">Get File</string>
    <string name="dialog_download_title">Get Image</string>
    <string name="dialog_download_message">File Name:</string>
    <string name="download_control_save_success">Saved</string>
    <string name="resolver_insert_failure">insert fail.</string>
    <string name="label_aelock">AEL/AFL</string>
    <string name="label_c_af">C-AF</string>
    <string name="white_balance">WB</string>
    <string name="exif_datetime_title">Date : </string>
    <string name="exif_exposure_time_title">Exposure Time : </string>
    <string name="exif_aperture_title">Aperture : </string>
    <string name="exif_focal_length_title">Focal Length : </string>
    <string name="exif_focal_35mm_equiv_title">35mm Equiv.</string>
    <string name="exif_iso_title">ISO : </string>
    <string name="exif_maker_title">Maker : </string>
    <string name="exif_camera_title">Model : </string>
    <string name="exif_camera_mode_title">Mode :</string>
    <string name="exif_metering_mode_title">Metering Mode :</string>
    <string name="exif_custom_process_title">(Custom Image Processing)</string>
    <string name="exif_with_gps">(with Geolocation)</string>
    <string name="pref_camera_sound_volume">Shutter Sound</string>
    <string name="pref_take_raw">Take Raw</string>
    <string name="pref_cat_live_view">Live View Settings</string>
    <string name="pref_live_view_quality">Live View Quality</string>
    <string name="pref_cat_info">Information</string>
    <string name="pref_focal_length">Focal Length</string>
    <string name="pref_lens_status">Lens Status</string>
    <string name="pref_media_status">SD Card Status</string>
    <string name="pref_camera_version">Camera Version</string>
    <string name="pref_camerakit_version">Camera kit Version</string>
    <string name="pref_use_gr2_special_command">Use GR2 Special Command</string>
    <string name="summary_use_gr2_special_command">If you use GR3 or PENTAX DSLR, please OFF this parameter.</string>
    <string name="pref_pentax_capture_after_auto_focus">Capture after AF(PENTAX)</string>
    <string name="summary_pentax_capture_after_auto_focus">Capture after AF.(for GR3/PENTAX DSLR, need restart)</string>
    <string name="dialog_confirm_title_output_log">Share debug log</string>
    <string name="dialog_confirm_message_output_log">Share the debug log, OK?</string>
    <string name="select_radio_date">Date</string>
    <string name="select_radio_path">Path</string>
    <string name="pref_ricoh_get_pics_list_timeout">Get Pics List Timeout(unit: sec.)</string>
    <string name="pref_summary_ricoh_get_pics_list_timeout">If the camera has many number of Pics, increase number.</string>
    <string name="dialog_http_command_title_command">HTTP Send</string>
    <string name="http_dialog_service_hint">(service)</string>
    <string name="http_dialog_method_hint">GET/POST/PUT</string>
    <string name="http_method_string">GET</string>
    <string name="http_service_string">get_camprop.cgi</string>
    <string name="http_dialog_command_hint">(command)</string>
    <string name="http_dialog_parameter_hint">(paramenter)</string>
    <string name="http_dialog_http_url_hint">http://192.168.1.1/</string>
    <string name="dialog_send_message">Send</string>
    <string name="dialog_button_liveview">to LiveView</string>
    <string name="dialog_button_playback">to Playback</string>
    <string name="pref_wifi_settings">WIFI Settings</string>
    <string name="pref_summary_wifi_settings"> </string>
    <string name="connect_prepare">Preparing&#8230;</string>
    <string name="connect_connecting">connecting&#8230;</string>
    <string name="connect_connecting1">Connecting&#8230;(1/12)</string>
    <string name="connect_connecting2">Connecting&#8230;(2/12)</string>
    <string name="connect_connecting3">Connecting&#8230;(3/12)</string>
    <string name="connect_connecting4">Connecting&#8230;(4/12)</string>
    <string name="connect_connecting5">Connecting&#8230;(5/12)</string>
    <string name="connect_connecting6">Connecting&#8230;(6/12)</string>
    <string name="connect_connecting7">Connecting&#8230;(7/12)</string>
    <string name="connect_connecting8">Connecting&#8230;(8/12)</string>
    <string name="connect_connecting9">Connecting&#8230;(9/12)</string>
    <string name="connect_connecting10">Connecting&#8230;(10/12)</string>
    <string name="connect_connecting11">Connecting&#8230;(11/12)</string>
    <string name="connect_connecting12">Connecting&#8230;(12/12)</string>
    <string name="connect_connect_finished">Connect Finished.</string>
    <string name="connect_receive_unknown_message">RECEIVED UNKNOWN ID MESSAGE</string>
    <string name="dialog_fujix_command_title_command">Send Message(FUJI)</string>
    <string name="pref_fuji_x_exit_only">Exit Application (FUJI)</string>
    <string name="pref_fujix_get_screennail_as_small_picture">Use small image as detail screen</string>
    <string name="pref_summary_fujix_get_screennail_as_small_picture">Use small size image for detail screen.</string>
</resources>