<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_fuji_x_exit_only" />
<!--
        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="FUJI_X"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />
-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">
<!--
        <CheckBoxPreference
            android:key="capture_both_camera_and_live_view"
            android:title="@string/pref_capture_both_camera_and_live_view" />
-->
        <CheckBoxPreference
            android:key="fujix_display_camera_view"
            android:title="@string/pref_fujix_display_camera_view"
            android:summary="@string/pref_fujix_display_camera_view_summary"/>

        <EditTextPreference
            android:key="fujix_focus_xy"
            android:title="@string/pref_fujix_focus_xy"
            android:defaultValue="7,7"
            android:summary="@string/pref_summary_fujix_focus_xy" />

        <EditTextPreference
            android:key="fujix_command_polling_wait"
            android:title="@string/pref_fujix_command_polling_wait"
            android:defaultValue="500"
            android:summary="@string/pref_summary_fujix_command_polling_wait" />

        <EditTextPreference
            android:key="fujix_liveview_wait"
            android:title="@string/pref_fujix_liveview_wait"
            android:defaultValue="80"
            android:summary="@string/pref_summary_fujix_liveview_wait" />

        <CheckBoxPreference
            android:key="fujix_get_screennail_as_small_picture"
            android:title="@string/pref_fujix_get_screennail_as_small_picture"
            android:summary="@string/pref_summary_fujix_get_screennail_as_small_picture" />
    </PreferenceCategory>
<!--
    <PreferenceCategory
        android:title="@string/pref_cat_initialize">

        <CheckBoxPreference
            android:key="auto_connect_to_camera"
            android:title="@string/pref_auto_connect_camera"
            android:summary="@string/pref_summary_auto_connect_camera" />
    </PreferenceCategory>
-->

    <PreferenceCategory
        android:title="@string/pref_cat_others">
<!--
        <CheckBoxPreference
            android:key="share_after_save"
            android:title="@string/pref_call_share_after_save" />

        <CheckBoxPreference
            android:key="use_playback_menu"
            android:title="@string/pref_use_playback_menu"
            android:summary="@string/summary_use_playback_menu" />
-->

        <Preference
            android:key="special_thanks"
            android:title="@string/pref_special_thanks"
            android:summary="https://github.com/hkr/fuji-cam-wifi-tool"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/hkr/fuji-cam-wifi-tool" />
        </Preference>
    </PreferenceCategory>
<!--
    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://osdn.net/projects/gokigen/wiki/GR2Control"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/GR2Control" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />
    </PreferenceCategory>
-->
</PreferenceScreen>
